@startuml

title __ENTITY's Class Diagram__\n

  package by.khomenko.task02.entity {
    class Container {
        - description : String
        + Container()
        + getDescription()
    }
  }
  
  package by.khomenko.task02.entity {
    class Port {
        - size : int
        - amountOfDocks : int
        + Port()
        + getStorage()
        + getAmountOfDocks()
    }
  }



  package by.khomenko.task02.entity {
    class Ship {
        - name : String
        + Ship()
        + getStorage()
        + getName()
    }
  }
  

  Port o-- Storage : storage
  Ship o-- Storage : storage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
